# RanName

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  resources.qrc
.github/workflows/: ci.yml
src/: main.cpp
src/config/: config_manager.cpp  config_manager.h
src/core/: config_manager.cpp  name_list.cpp  randomizer.cpp  randomizer.h
src/data/: name_list.cpp  name_list.h
src/gui/: main.cpp  main_window.cpp  main_window.h  ui_main_window.h
src/i18n/: localizer.cpp  localizer.h
src/ui/: console.cpp  console.h  console_ui.cpp  console_ui.h  setup_tui.cpp  setup_tui.h  tui.cpp  tui.h
src/utils/: platform.cpp  platform.h
tools/setup/: setup.cpp
trans/: RandomNamePicker_en_US.ts  RandomNamePicker_zh_CN.ts
ui_files/: MainWindow.ui
